@@ -51,8 +51,10 @@ EXTRA_DIST = \
 	progtest.m4 \
 	realloc.m4 \
 	restrict.m4 \
+	size_max.m4 \
 	stat.m4 \
 	stdint_h.m4 \
 	uintmax_t.m4 \
 	ulonglong.m4 \
-	unlocked-io.m4
+	unlocked-io.m4 \
+	xsize.m4
